# Rational-Calculator

./: CMakeLists.txt  README.md  main.cpp
classes/: Fraction.cpp  Fraction.h  Math_element.cpp  Math_element.h  My_expression.cpp  My_expression.h
